[package]
name = "eveningbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.9.0"
poise = "0.6.1" 
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-cron-scheduler = "0.10.2"
