[package]
name = "eveningbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = "0.9.0"
log = "0.4.21"
phf = { version = "0.11.2", features = ["macros"] }
poise = "0.6.1" 
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
rmp-serde = "1.3.0"
serde = "1.0.200"
simplelog = "0.12.2"
time = { version = "0.3.36", features = ["serde", "parsing"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-cron-scheduler = "0.10.2"
uuid = "1.8.0"
